--- a/style.css
+++ b/style.css
@@ -32,10 +32,69 @@ body {
     border-radius: 10px;
 }
 
+/*.navbar a, .dropbtn {
+    float: left;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}*/
+
 .navbar a:hover {
     background: #555;
     color: lightblue;
 }
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+  }
+  
+  .dropbtn {
+    padding: 15px 20px;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: background 0.5s ease, color 0.5s ease;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    top: 100%;
+    left: 0;
+    z-index: 1001;
+  }
+  
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    background-color: #333;
+    transition: background 0.5s ease, color 0.5s ease;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #555;
+    color: lightblue;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: lightblue;
+  }
 
 .container {
     margin: 100px auto 20px;
